--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,8 @@
 Options +ExecCGI
 AddHandler cgi-script .cgi
+
+# Deny all from Internet :)
+
+Order Deny,Allow
+Deny from all
+Allow from 127.0.0.1
